--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -26,7 +26,7 @@
     <string>TextLabel</string>
    </property>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>10</x>
@@ -45,7 +45,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>7</string>
       </property>
      </widget>
     </item>
@@ -58,7 +58,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>8</string>
       </property>
      </widget>
     </item>
@@ -71,7 +71,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>9</string>
       </property>
      </widget>
     </item>
@@ -84,7 +84,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>*</string>
       </property>
      </widget>
     </item>
@@ -97,7 +97,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>4</string>
       </property>
      </widget>
     </item>
@@ -110,7 +110,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>5</string>
       </property>
      </widget>
     </item>
@@ -123,7 +123,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>6</string>
       </property>
      </widget>
     </item>
@@ -136,7 +136,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>-</string>
       </property>
      </widget>
     </item>
@@ -149,7 +149,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>1</string>
       </property>
      </widget>
     </item>
@@ -162,7 +162,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>2</string>
       </property>
      </widget>
     </item>
@@ -175,7 +175,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>3</string>
       </property>
      </widget>
     </item>
@@ -188,7 +188,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>+</string>
       </property>
      </widget>
     </item>
@@ -201,7 +201,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>C</string>
       </property>
      </widget>
     </item>
@@ -214,7 +214,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>0</string>
       </property>
      </widget>
     </item>
@@ -227,7 +227,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>.</string>
       </property>
      </widget>
     </item>
@@ -240,7 +240,7 @@
        </sizepolicy>
       </property>
       <property name="text">
-       <string>PushButton</string>
+       <string>=</string>
       </property>
      </widget>
     </item>
